--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/JabsonBB/nodejs-api#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^2.7.2",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   }
